--- a/css/nav.css
+++ b/css/nav.css
@@ -630,7 +630,7 @@ footer .container{
   padding: 2% 4%;
 }
 .aboutus h1{
-  border-bottom: 4px solid rgb(233, 159, 0);
+  border-bottom: 4px solid rgb(23, 0, 233));
   width: 190px;
   padding-bottom: 1%;
   }
